--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node --loader ts-node/esm index.ts"
+    "start": "node --loader ts-node/esm src/index.ts"
   },
   "author": "",
   "license": "ISC",
@@ -17,8 +17,10 @@
     "typeorm": "^0.3.17"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.15",
     "@types/express": "^4.17.20",
     "@types/node": "^20.8.8",
+    "@types/pg": "^8.10.7",
     "ts-node": "^10.9.1",
     "typescript": "^5.2.2"
   }
