--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node --loader ts-node/esm src/index.ts"
+    "start": "nodemon"
   },
   "author": "",
   "license": "ISC",
@@ -21,6 +21,7 @@
     "@types/express": "^4.17.20",
     "@types/node": "^20.8.8",
     "@types/pg": "^8.10.7",
+    "nodemon": "^3.0.1",
     "ts-node": "^10.9.1",
     "typescript": "^5.2.2"
   }
