--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "fantazy-stats-client",
-  "version": "0.1.0",
-  "private": true,
+  "name": "fantazy-statistics",
+  "version": "1.0.0",
+  "homepage": "https://matan0810.github.io/fantazy-statistics",
   "dependencies": {
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
@@ -18,6 +18,8 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -40,5 +42,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^6.0.0"
   }
 }
