--- a/src/data/seasons.json
+++ b/src/data/seasons.json
@@ -93,5 +93,11 @@
     "id": 19,
     "year": 2024,
     "type": 1
+  },
+  {
+    "id": 20,
+    "year": 2024,
+    "type": 3,
+    "name": "ליגת Eurovision 24"
   }
 ]
